# qweather-skill

./: Cargo.toml  PRD.md  README.md  install.sh
.githooks/: pre-commit
.github/workflows/: publish.yml  release.yml
PRD/: PRD.md  air.md  geo.md  grid.md  warning.md  weather.md
docs/: index.html
skill/: SKILL.md
src/: client.rs  config.rs  error.rs  lib.rs  main.rs  models.rs
src/api/: air.rs  astronomy.rs  geo.rs  grid_weather.rs  indices.rs  minutely.rs  mod.rs  warning.rs  weather.rs
src/cli/: format.rs  mod.rs
src/cli/commands/: air.rs  geo.rs  grid.rs  indices.rs  mod.rs  moon.rs  precipitation.rs  solar.rs  sun.rs  warning.rs  weather.rs
tests/: integration_tests.rs
