[package]
name = "qweather"
version = "0.3.0"
edition = "2021"
authors = ["yinguobing <yinguobing@gmail.com>"]
description = "专门为龙虾（OpenClaw）开发的和风天气查询技能"
license = "MIT"
repository = "https://github.com/yinguobing/qweather-skill"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
jsonwebtoken = "9"
thiserror = "2"
anyhow = "1"
chrono = "0.4"
shellexpand = "3"
lazy_static = "1"

[dev-dependencies]
mockito = "1"

[[bin]]
name = "qweather"
path = "src/main.rs"
